--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,18 +9,10 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/${db.name}
-jdbc.username=root
-jdbc.password=root
-
-db.name=shareit
-
-javax.persistence.schema-generation.database.action=create
-javax.persistence.schema-generation.create-script-source=schema.sql
+# TODO Append connection to DB
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:public
+spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
