--- a/pom.xml
+++ b/pom.xml
@@ -11,100 +11,37 @@
 
 	<groupId>ru.practicum</groupId>
 	<artifactId>shareit</artifactId>
+	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>ShareIt</name>
 
 	<properties>
-		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.8.1</version>
-		</dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-			<version>RELEASE</version>
-			<scope>compile</scope>
-        </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>gateway</module>
+		<module>server</module>
+	</modules>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+							</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -163,17 +100,16 @@
 					<configuration>
 						<output>file</output>
 						<excludes>
+							<exclude>ru/practicum/shareit/booking</exclude>
+							<exclude>rru/practicum/shareit/client</exclude>
+							<exclude>ru/practicum/shareit/item</exclude>
+							<exclude>ru/practicum/shareit/request</exclude>
+							<exclude>ru/practicum/shareit/user</exclude>
 							<exclude>ru/practicum/shareit/booking/ErrorResponse.class</exclude>
 							<exclude>ru/practicum/shareit/booking/WebRestControllerAdvice.class</exclude>
 							<exclude>ru/practicum/shareit/item/Comment.class</exclude>
 							<exclude>ru/practicum/shareit/item/ItemRequestNotFoundException.class</exclude>
 							<exclude>ru/practicum/shareit/item/ItemValidationException.class</exclude>
-							<exclude>ru/practicum/shareit/booking/dto/BookingDto.class</exclude>
-							<exclude>ru/practicum/shareit/item/dto/ItemDto.class</exclude>
-							<exclude>ru/practicum/shareit/item/dto/OwnerItemDto.class</exclude>
-							<exclude>ru/practicum/shareit/request/dto/ItemRequestDto.class</exclude>
-							<exclude>ru/practicum/shareit/request/model/ItemRequest.class</exclude>
-							<exclude>ru/practicum/shareit/user/dto/UserDto.class</exclude>
 						</excludes>
 					</configuration>
 					<executions>
@@ -190,18 +126,18 @@
 							</goals>
 							<configuration>
 								<excludes>
+									<exclude>ru/practicum/shareit/booking</exclude>
+									<exclude>rru/practicum/shareit/client</exclude>
+									<exclude>ru/practicum/shareit/item</exclude>
+									<exclude>ru/practicum/shareit/request</exclude>
+									<exclude>ru/practicum/shareit/user</exclude>
 									<exclude>ru/practicum/shareit/booking/ErrorResponse.class</exclude>
 									<exclude>ru/practicum/shareit/booking/WebRestControllerAdvice.class</exclude>
 									<exclude>ru/practicum/shareit/item/Comment.class</exclude>
 									<exclude>ru/practicum/shareit/item/ItemRequestNotFoundException.class</exclude>
 									<exclude>ru/practicum/shareit/item/ItemValidationException.class</exclude>
-									<exclude>ru/practicum/shareit/booking/dto/BookingDto.class</exclude>
-									<exclude>ru/practicum/shareit/item/dto/ItemDto.class</exclude>
-									<exclude>ru/practicum/shareit/item/dto/OwnerItemDto.class</exclude>
-									<exclude>ru/practicum/shareit/request/dto/ItemRequestDto.class</exclude>
-									<exclude>ru/practicum/shareit/request/model/ItemRequest.class</exclude>
-									<exclude>ru/practicum/shareit/user/dto/UserDto.class</exclude>
 								</excludes>
+
 								<rules>
 									<rule>
 										<element>BUNDLE</element>
@@ -277,17 +213,5 @@
 				</plugins>
 			</reporting>
 		</profile>
-		<profile>
-			<id>coverage</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
-
 </project>
